<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_beer"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    tools:context="com.example.filip.bestbeer.ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#fff"
        android:text="@string/cerveja_campea"
        android:padding="5dp"
        android:background="#990000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:paddingBottom="10dp"
        android:background="#663311">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/gold_medal"
            android:layout_gravity="bottom"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/bestBeer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:layout_marginRight="20dp"
                android:text="CERVEJA X"
                android:background="#663311" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#663311"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ml_s"
                    android:textSize="22dp"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/fstQtd"
                    android:layout_width="match_parent"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/qtd_result"
                    android:textColor="#fff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#663311"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/price"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/fstPreco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="22dp"
                    android:text="@string/prc"
                    android:textColor="#fff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#663311"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/media"
                    android:textColor="#fff"/>

                <TextView
                    android:id="@+id/fstMedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="22dp"
                    android:text="@string/med"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/silver_medal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/sndBeer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="CERVEJA X "
                    android:textColor="#fff"/>
                <TextView
                    android:id="@+id/sndMedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/preco_por_ml"
                    android:textColor="#fff"/>
            </LinearLayout>
        </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/cooper_medal"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/trdBeer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="CERVEJA X "
                android:textColor="#fff"/>


            <TextView
                android:id="@+id/trdMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/preco_por_ml"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/lead_medal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/fthBeer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="CERVEJA X "
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/fthMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/preco_por_ml"
                android:textColor="#fff"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#fff"
        android:text="@string/moderation"
        android:padding="10dp"
        android:background="#663311"/>
</LinearLayout>
</ScrollView>