<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_beer"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.filip.bestbeer.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content"
        android:text="@string/cerveja_1"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#663311"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/mysterious_lightgray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#663311">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:text="@string/ml_s"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/qtd_beer_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/qtd_for_ml"
                    android:inputType="numberDecimal"
                    android:maxWidth="100dp"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/price_beer_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxWidth="100dp"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:hint="@string/price_in_money"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content"
        android:text="@string/cerveja_2"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#663311"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/mysterious_lightgray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#663311">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:text="@string/ml_s"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/qtd_beer_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/qtd_for_ml"
                    android:inputType="numberDecimal"
                    android:maxWidth="100dp"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/price_beer_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxWidth="100dp"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:hint="@string/price_in_money"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_height="wrap_content"
        android:text="@string/cerveja_3"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#663311"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/mysterious_lightgray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#663311">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:text="@string/ml_s"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/qtd_beer_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/qtd_for_ml"
                    android:inputType="numberDecimal"
                    android:maxWidth="100dp"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/price_beer_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxWidth="100dp"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:hint="@string/price_in_money"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerveja_4"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"
        android:background="#663311"
        android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/mysterious_lightgray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#663311">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:text="@string/ml_s"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/qtd_beer_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/qtd_for_ml"
                    android:inputType="numberDecimal"
                    android:maxWidth="100dp"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/price_beer_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxWidth="100dp"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:hint="@string/price_in_money"
                    android:background="#C39373"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20dp"
        android:background="#990000"
        android:text="@string/calcular"/>

</LinearLayout>
</ScrollView>
